# gen-ai-terminology

./: README.md  main.ipynb  pyproject.toml
