[project]
name = "gen-ai-terminology"
version = "0.1.0"
description = "Jupyter notebook about GenAI basic concepts with some examples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.1.0",
    "tavily-python>=0.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
